<resources>
    <string name="app_name">GPS Location</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="Speed">Speed</string>
    <string name="position">Position</string>
    <string name="other">Other</string>
    <string name="accuracy">Accuracy</string>
    <string name="actions">Actions</string>
    <string name="displayGPS">Display GPS position</string>
    <string name="numSatellites"># Satellites</string>
    <string name="warningGPSDisabled">Warning: GPS is disabled</string>
    <string name="warningGPSTempUnavailable">Warning: GPS is temporarily unavailable</string>
    <string name="warningGPSUnavailable">Warning: GPS is unavailable</string>
    <string name="units">Units</string>
    <string name="unitEurope">Meters</string>
    <string name="unitUk">Miles/Foot</string>
    <string name="valueMeter">%f meter</string>
    <string name="valueFoot">%f foot</string>
    <string name="valueKmh">%f km/h</string>
    <string name="valueMph">%f mph</string>
    <string name="gpsFixMessage">Waiting for GPS fix</string>
    <string name="locationClip">GPS coordinates</string>
    <string name="otherClip">Other GPS data</string>
    <string name="coordinatesCopied">Coordinates copied to the clipboard</string>
    <string name="otherCopied">Other information copied to the clipboard</string>
    <string name="close">Close</string>
    <string name="help">Help</string>
    <string name="locationAuth">App not authorized to access location.</string>
    <string name="permission">Permission</string>
    <string name="share">Share</string>
    <string name="location_unknown">No location fix yet</string>
    <string name="not_current">Warning:not current location. Location is recorded at:</string>
    <string name="googleMap">Google map</string>
    <string name="googleMapNotFound">Google map application not found</string>
</resources>
