<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.elaya.gpxpoint.GPSInfo">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp"
        android:gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gpsFixLabel"
                style="@style/gpsFixMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gpsFixMessage" />

            <LinearLayout
                android:id="@+id/permissionWarning"
                style="@style/warningLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/locationAuth"
                    android:textColor="#FFF" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="askPermission"
                    android:text="@string/permission" />
            </LinearLayout>

            <TextView
                android:id="@+id/warningText"
                style="@style/warningLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/notCurrent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/warningLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_current" />

                <TextView
                    android:id="@+id/lastTime"
                    style="@style/warningLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    style="@style/sectionLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/actions"
                    tools:layout_editor_absoluteX="-20dp"
                    tools:layout_editor_absoluteY="-9dp" />

            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/borderlonlat"
                android:paddingTop="5dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/displayGPS" />

                    <Switch
                        android:id="@+id/displayGPS"
                        style="@android:style/Widget.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:switchPadding="3dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/units" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingEnd="0dp"
                        android:paddingStart="3dp">

                        <RadioButton
                            android:id="@+id/unitMeter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="toggleUnits"
                            android:text="@string/unitEurope" />

                        <RadioButton
                            android:id="@+id/unitFoot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="toggleUnits"
                            android:text="@string/unitUk" />
                    </RadioGroup>
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:id="@+id/gpsData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        style="@style/sectionLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|start"
                        android:layout_weight="1"
                        android:text="@string/position" />

                    <ImageView
                        android:id="@+id/copyLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:contentDescription="@string/coordinatesCopied"
                        android:onClick="copyCoordinates"
                        android:scaleX="3"
                        android:scaleY="3"
                        android:src="@drawable/copyicon" />

                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/borderlonlat"
                    android:paddingTop="5dp">

                    <TableRow
                        style="@style/lonLat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView4"
                            style="@style/lonLat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lat" />

                        <TextView
                            android:id="@+id/valueLat"
                            style="@style/lonLat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />
                    </TableRow>

                    <TableRow
                        style="@style/lonLat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView2"
                            style="@style/lonLat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lon" />

                        <TextView
                            android:id="@+id/valueLon"
                            style="@style/lonLat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />
                    </TableRow>

                </TableLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/sectionLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/other" />

                    <ImageView
                        android:id="@+id/copyOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:contentDescription="@string/otherCopied"
                        android:onClick="copyOther"
                        android:scaleX="3"
                        android:scaleY="3"
                        android:src="@drawable/copyicon" />

                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borderlonlat"
                    android:paddingTop="5dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView8"
                            style="@style/otherLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Speed" />

                        <TextView
                            android:id="@+id/valueSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView6"
                            style="@style/otherLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/altitude" />

                        <TextView
                            android:id="@+id/valueAltitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView11"
                            style="@style/otherLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/accuracy" />

                        <TextView
                            android:id="@+id/valueAccuracy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView16"
                            style="@style/otherLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/numSatellites" />

                        <TextView
                            android:id="@+id/valueNumSatellites"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textIsSelectable="true" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    </LinearLayout>
</LinearLayout>
